edit report: graph&pdf download

--- a/GoodPT/report/templates/report.html
+++ b/GoodPT/report/templates/report.html
@@ -11,6 +11,43 @@
 <link rel="stylesheet" href="{% static '/report.css' %}" />
 <link href="https://fonts.googleapis.com/css?family=Raleway:200,300,400" rel="stylesheet">
 
+<script src="{% static '/js/html2canvas.js' %}"></script>
+<script src="{% static '/js/jspdf.min.js' %}"></script>
+<script src="https://code.jquery.com/jquery-3.4.1.js"></script>
+<script>
+    $(document).ready(function() {
+        $('#savePdf').click(function() { // pdf저장 button id
+            
+            html2canvas($('#pdfCanvas')[0]).then(function(canvas) { //저장 영역 div id
+            
+            // 캔버스를 이미지로 변환
+            var imgData = canvas.toDataURL('image/png');
+                 
+            var imgWidth = 190; // 이미지 가로 길이(mm) / A4 기준 210mm
+            var pageHeight = imgWidth * 1.414;  // 출력 페이지 세로 길이 계산 A4 기준
+            var imgHeight = canvas.height * imgWidth / canvas.width;
+            var heightLeft = imgHeight;
+            var margin = 10; // 출력 페이지 여백설정
+            var doc = new jsPDF('p', 'mm');
+            var position = 0;
+               
+            // 첫 페이지 출력
+            doc.addImage(imgData, 'PNG', margin, position, imgWidth, imgHeight);
+            heightLeft -= pageHeight;
+                 
+            // 한 페이지 이상일 경우 루프 돌면서 출력
+            while (heightLeft >= 20) {
+                position = heightLeft - imgHeight;
+                doc.addPage();
+                doc.addImage(imgData, 'PNG', 0, position, imgWidth, imgHeight);
+                heightLeft -= pageHeight;
+            }
+            // 파일 저장
+            doc.save('report.pdf');
+            });
+        });
+    })    
+</script>
 
 <style>
     ul {
@@ -47,6 +84,23 @@
     .navlist input[type=checkbox]:checked + label + ul {
         max-height: 1000px; 
     }
+    #savePdf {
+        margin-top: 10px;
+        display: block;
+        width:250px;
+        height:50px;
+        line-height:50px;
+        text-align:center;
+        color:#989898;
+        background-color: #f1f1f1;
+        -webkit-transition: all .25s ease-in;
+        transition: all .25s ease-in;
+        border:1px solid #d7d7d7;
+    }
+    #savePdf:hover {
+        color: rgba(255, 255, 255, 0.9);
+        background: #424D83;
+    }
 </style>
 <body>
     <div class = "report">
@@ -58,8 +112,9 @@
                     {% endfor %}
                 </ul>
              </nav>
+             <button type="button" id="savePdf" ><img src="{% static '/img/icons/download2.png' %}" width="15px" />PDF 저장하기</button>
         </div>
-        <div class = "report-main">
+        <div class = "report-main" id="pdfCanvas">
             <div class="report-row report-container">
                 <div class="large-12 columns">
                     <div class="report-row hero">
@@ -68,13 +123,13 @@
                             <p><b>{{ user }}님의 {{reportID}}번째 발표 분석 결과입니다.</b></p>
                             <p>발표 날짜: {{date}}</p>
                         </div>
-                        <div class="large-6 columns panel bg" data-equalizer-watch>&nbsp;</div>
+                        <img src="{% static '/img/illustrations/main.png' %}" width="500px" style="padding-top:20px;"/>
                     </div>
                 </div>
                 <div class="report-row">
                     <div class="large-12 columns title text-center">
                         <h1>태도 분석</h1>
-                        <p>Check out our amazing graphs made by chartist.js based on our search results in our search engine</p>
+                        <p>발표자의 자연스러운 시선처리와 제스처는 발표자의 자신감을 보여줍니다.</p>
                         <table align="center">
                             <tr align="center">
                                 <td width=300 style="padding-right: 20px;">
@@ -90,7 +145,7 @@
                                             <span style="float: right;">{{static_rate}} %</span>
                                         </h6>
                                         <div class="progress-bar">           
-                                            <div class="progress"> </div>
+                                            <div class="progress static-bg"> <div class="check-point static-point"> </div> </div>
                                         </div>
                                     </div>
                                     <div class="graph-box">
@@ -99,7 +154,7 @@
                                             <span style="float: right;">{{face_recog_rate}} %</span>
                                         </h6>
                                         <div class="progress-bar">           
-                                            <div class="progress"> </div>
+                                            <div class="progress face-bg"> <div class="check-point face-point"> </div> </div>
                                         </div>
                                     </div>
                                 </td>
@@ -109,7 +164,7 @@
                     <hr>
                     <div class="large-12 columns title text-center">
                         <h1>음성 분석</h1>
-                        <p>Check out our amazing graphs made by chartist.js based on our search results in our search engine</p>
+                        <p>발표의 언어적 요소와 빠르기에 따라 청중들의 발표 집중도가 결정됩니다.</p>
                         <table align="center">
                             <tr align="center">
                                 <td width=300 style="padding-right: 20px;">
@@ -125,7 +180,7 @@
                                             <span style="float: right;">{{surplus_rate}} %</span>
                                         </h6>
                                         <div class="progress-bar">           
-                                            <div class="progress"> </div>
+                                            <div class="progress surplus-bg"> <div class="check-point surplus-point"> </div> </div>
                                         </div>
                                     </div>
                                     <div class="graph-box">
@@ -134,7 +189,7 @@
                                             <span style="float: right;">{{speed_rate}} %</span>
                                         </h6>
                                         <div class="progress-bar">           
-                                            <div class="progress"> </div>
+                                            <div class="progress speed-bg"> <div class="check-point speed-point"> </div> </div>
                                         </div>
                                     </div>
                                 </td>
@@ -157,40 +212,54 @@
                     </div>
                     <hr>
                     <div class="large-12 columns title text-center">
-                        <h1>발표 내용 확인</h1>
+                        <h1>질의응답 내용 확인</h1>
                         <p>Check out our amazing graphs made by chartist.js based on our search results in our search engine</p>
-                    </div>
-                    <div class="large-12 columns title text-center">
-                        <h1>Q&A</h1>
-                        <h6>
-                            Q1 : &quot;{{q1}}&quot;
-                        </h6>
-                        <h6>
-                            A1 : &quot;{{a1}}&quot;
-                        </h6>
-                        <h6>
-                            Q2 : &quot;{{q2}}&quot;
-                        </h6>
-                        <h6>
-                            A2 : &quot;{{a2}}&quot;
-                        </h6>
-                        <h6>
-                            Q3 : &quot;{{q3}}&quot;
-                        </h6>
-                        <h6>
-                            A3 : &quot;{{a3}}&quot;
-                        </h6>
-                    </div>
-                    </div>
+                        <div class="question-set">
+                            <h6>
+                                Q1 : &quot;{{q1}}&quot;
+                            </h6>
+                            <h6>
+                                A1 : &quot;{{a1}}&quot;
+                            </h6>
+                        </div>
+                        <div class="question-set">
+                            <h6>
+                                Q2 : &quot;{{q2}}&quot;
+                            </h6>
+                            <h6>
+                                A2 : &quot;{{a2}}&quot;
+                            </h6>
+                        </div>
+                        <div class="question-set">
+                            <h6>
+                                Q3 : &quot;{{q3}}&quot;
+                            </h6>
+                            <h6>
+                                A3 : &quot;{{a3}}&quot;
+                            </h6>
+                        </div>
+                    </div> 
                 </div>
+                <p style="float: right;">Presentation analyzed by<img src="{% static '/img/logo/main_logo_2.png' %}" width="100"/></p>
             </div>
         </div>
     </div>
 </body>
 <script>
-    progressBar = document.getElementsByClassName('progress')[0]
-    console.log(progressBar)
-    percentage_static_rate = {{static_rate}}*100
-    progressBar.style.width = percentage_static_rate+'%'
+    progressBar_static = document.getElementsByClassName('static-point')[0]
+    percentage_static_rate = 100 - {{static_rate}}*100
+    progressBar_static.style.marginRight = percentage_static_rate+'%'
+
+    progressBar_face = document.getElementsByClassName('face-point')[0]
+    percentage_face_rate = 100 - {{face_recog_rate}}*100
+    progressBar_face.style.marginRight = percentage_face_rate+'%'
+
+    progressBar_surplus = document.getElementsByClassName('surplus-point')[0]
+    percentage_surplus_rate = 100 - {{surplus_rate}}*100
+    progressBar_surplus.style.marginRight = percentage_surplus_rate+'%'
+
+    progressBar_speed = document.getElementsByClassName('speed-point')[0]
+    percentage_speed_rate = 100 - {{speed_rate}}*100
+    progressBar_speed.style.marginRight = percentage_speed_rate+'%'
 </script>
 {% endblock content %}
