edit report: page 나누기

--- a/GoodPT/report/templates/report.html
+++ b/GoodPT/report/templates/report.html
@@ -14,40 +14,6 @@
 <script src="{% static '/js/html2canvas.js' %}"></script>
 <script src="{% static '/js/jspdf.min.js' %}"></script>
 <script src="https://code.jquery.com/jquery-3.4.1.js"></script>
-<script>
-    $(document).ready(function() {
-        $('#savePdf').click(function() { // pdf저장 button id
-            
-            html2canvas($('#pdfCanvas')[0]).then(function(canvas) { //저장 영역 div id
-            
-            // 캔버스를 이미지로 변환
-            var imgData = canvas.toDataURL('image/png');
-                 
-            var imgWidth = 190; // 이미지 가로 길이(mm) / A4 기준 210mm
-            var pageHeight = imgWidth * 1.414;  // 출력 페이지 세로 길이 계산 A4 기준
-            var imgHeight = canvas.height * imgWidth / canvas.width;
-            var heightLeft = imgHeight;
-            var margin = 10; // 출력 페이지 여백설정
-            var doc = new jsPDF('p', 'mm');
-            var position = 0;
-               
-            // 첫 페이지 출력
-            doc.addImage(imgData, 'PNG', margin, position, imgWidth, imgHeight);
-            heightLeft -= pageHeight;
-                 
-            // 한 페이지 이상일 경우 루프 돌면서 출력
-            while (heightLeft >= 20) {
-                position = heightLeft - imgHeight;
-                doc.addPage();
-                doc.addImage(imgData, 'PNG', 0, position, imgWidth, imgHeight);
-                heightLeft -= pageHeight;
-            }
-            // 파일 저장
-            doc.save('report.pdf');
-            });
-        });
-    })    
-</script>
 
 <style>
     ul {
@@ -116,17 +82,17 @@
         </div>
         <div class = "report-main" id="pdfCanvas">
             <div class="report-row report-container">
-                <div class="large-12 columns">
+                <div class="large-12 columns pdf_page">
                     <div class="report-row hero">
                         <div class="large-6 columns panel">
-                            <h1>발표 분석 결과</h1>
-                            <p><b>{{ user }}님의 {{reportID}}번째 발표 분석 결과입니다.</b></p>
-                            <p>발표 날짜: {{date}}</p>
+                            <h1><b>발표 분석 결과</b></h1>
+                            <p style="font-size: 15px;"><b>{{ user }}님의 {{reportID}}번째 발표 분석 결과입니다.</b></p>
+                            <p style="font-size: 15px;">발표 날짜: {{date}}</p>
+                            <img src="{% static '/img/illustrations/main.png' %}" width="800px" style="padding-top:20px;"/>
                         </div>
-                        <img src="{% static '/img/illustrations/main.png' %}" width="500px" style="padding-top:20px;"/>
                     </div>
                 </div>
-                <div class="report-row">
+                <div class="report-row pdf_page">
                     <div class="large-12 columns title text-center">
                         <h1>태도 분석</h1>
                         <p>발표자의 자연스러운 시선처리와 제스처는 발표자의 자신감을 보여줍니다.</p>
