썸네일및모달
썸네일 수정및 모달 외부클릭 창닫기와

게시판 개인정보처리방침 링크 삽입

--- a/GoodPT/board/templates/base.html
+++ b/GoodPT/board/templates/base.html
@@ -121,6 +121,9 @@
                 <li class="list-inline-item mr-2"><a class="text-decoration-none" href="#!"><img class="list-social-icon" src="{% static '/img/gallery/union-pay.png' %}" width="50" alt="..." /></a></li>
               </ul>
             </div>
+            <h6 class="lh-lg fw-bold text-white text-end position-absoulte bottom-0 end-0">
+              <a href="http://localhost:8000/login/privacy" target = "_blank" onclick="privacypolicy()" style="text-decoration: none; color: inherit;">개인정보 처리방침</a>
+            </h6>
           </div>
           <hr />
           <div class="row flex-center pb-3">
