--- a/GoodPT/templates/layout.html
+++ b/GoodPT/templates/layout.html
@@ -117,12 +117,11 @@
                 <li class="list-inline-item mr-2"><a class="text-decoration-none" href="#!"><img class="list-social-icon" src="{% static '/img/gallery/master-card.png' %}" width="50" alt="..." /></a></li>
                 <li class="list-inline-item mr-2"><a class="text-decoration-none" href="#!"><img class="list-social-icon" src="{% static '/img/gallery/union-pay.png' %}" width="50" alt="..." /></a></li>
               </ul>
-              <h6 class="text-md-end text-white" >   
-                
+             
+            </div>
+            <h6 class="lh-lg fw-bold text-white text-end position-absoulte bottom-0 end-0">
                 <a href="http://localhost:8000/login/privacy" target = "_blank" onclick="privacypolicy()" style="text-decoration: none; color: inherit;">개인정보 처리방침</a>
               </h6>
-            </div>
-           
           </div>
           <hr />
           <div class="row flex-center pb-3">
