--- a/GoodPT/report/templates/report.html
+++ b/GoodPT/report/templates/report.html
@@ -91,6 +91,7 @@
                             <img src="{% static '/img/illustrations/main.png' %}" width="800px" style="padding-top:20px;"/>
                         </div>
                     </div>
+                    <p style="float: right;">Presentation analyzed by<img src="{% static '/img/logo/main_logo_2.png' %}" width="100"/></p>
                 </div>
                 <div class="report-row pdf_page">
                     <div class="large-12 columns title text-center">
@@ -204,9 +205,10 @@
                                 A3 : &quot;{{a3}}&quot;
                             </h6>
                         </div>
-                    </div> 
+                    </div>
+                    <p style="float: right;">Presentation analyzed by<img src="{% static '/img/logo/main_logo_2.png' %}" width="100"/></p>
                 </div>
-                <p style="float: right;">Presentation analyzed by<img src="{% static '/img/logo/main_logo_2.png' %}" width="100"/></p>
+                {% comment %} <p style="float: right;">Presentation analyzed by<img src="{% static '/img/logo/main_logo_2.png' %}" width="100"/></p> {% endcomment %}
             </div>
         </div>
     </div>
