페이지를 줄였을 때 칸 줄어드는 상황 고침

--- a/GoodPT/templates/index.html
+++ b/GoodPT/templates/index.html
@@ -107,7 +107,7 @@
                 </div>
               </div>
               <div style="margin-top: 15px; text-align: center;">
-                <h5 style="color: white;">"나보다 잘하는데?" 교수님과 학생이 서로 감탄하는 ...</h5>
+                <h5 style="color: white;">"나보다 잘하는데?" 교수님과...</h5>
               </div>
             </div>
           </div>
