edit login page ui

--- a/GoodPT/accounts/templates/login.html
+++ b/GoodPT/accounts/templates/login.html
@@ -84,7 +84,7 @@
             </div>
         </div>
     </div>
-    <div class="modal agreement-popup" id="termsConditions">
+    <div class="modal agreement-popup" id="termsConditions" style="margin-top: 50px;">
         <div class="modal-container with-accept">
             <div class="top">
                 <h4>이용약관 동의</h4>
