--- a/GoodPT/accounts/static/css/login.css
+++ b/GoodPT/accounts/static/css/login.css
@@ -18,7 +18,8 @@
     width: 768px;
     min-height: 480px;
     overflow: hidden;
-    margin-top: 100px;
+    margin-top: -80px;
+    /* margin-top: 100px; */
 }
 .login_form {
     background: #ebecf0;
