--- a/GoodPT/accounts/static/css/modal.css
+++ b/GoodPT/accounts/static/css/modal.css
@@ -148,7 +148,7 @@ abutton,
   left: 0;
   right: 0;
   height: 2rem;
-  background: linear-gradient(to top, rgba(255, 255, 255, 1) 50%, rgba(255, 255, 255, 0));
+  /* background: linear-gradient(to top, rgba(255, 255, 255, 1) 50%, rgba(255, 255, 255, 0)); */
   z-index: 1;
 }
 
