--- a/GoodPT/mypage/templates/mypage/mypage.html
+++ b/GoodPT/mypage/templates/mypage/mypage.html
@@ -1,15 +1,15 @@
-{% extends "layout.html" %} 
-{% block content %}
+{% extends "layout.html" %} {% block content %}
 <div class="container page-body" id="mypage_container">
     <div class="row">
         <div class="col-sm-12" style="margin-top: 80px">
             <h1>My Info</h1>
+            {% if profile.image %}
+                <img src="{{ profile.image.url }}" class="mb-3" height="150" />
+            {% endif %}
             <br />
             <ul class="list-group list-group">
                 <li class="list-group-item">Name : {{user}}</li>
                 <li class="list-group-item">Email : {{user.email}}</li>
-                <li class="list-group-item">Tel : {{user.profile.phone_number}}</li>
-                <li class="list-group-item">Address : {{user.profile.address}}</li>
                 <li class="list-group-item">Signup : {{user.date_joined}}</li>
             </ul>
             <br />
@@ -17,9 +17,8 @@
             <a class="btn btn-secondary" href="{% url 'mypage:password_change' %}">패스워드 변경</a>
             {% else %}
             <h5>소셜 로그인 패스워드 변경 불가</h5>
-            {% endif %}
-            {% if user.profile.report %}
-            <a class="btn btn-primary" href="/report" style="background-color: #6671a4; border: #6671a4;">리포트 보기</a>
+            {% endif %} {% if user.profile.report %}
+            <a class="btn btn-primary" href="/report" style="background-color: #6671a4; border: #6671a4">리포트 보기</a>
             {% endif %}
         </div>
     </div>
