--- a/GoodPT/templates/index.html
+++ b/GoodPT/templates/index.html
@@ -142,7 +142,7 @@
 
   <!-- ============================================-->
   <!-- <section> begin ============================-->
-  <section class="pt-6" id="pricingTable">
+  <section class="pt-6" id="pricingTable" style="padding-bottom: 4rem;">
 
     <div class="container">
       <div class="row">
