--- a/GoodPT/static/style.css
+++ b/GoodPT/static/style.css
@@ -24,13 +24,15 @@ body {
     border-radius: 10px;
     overflow-y: scroll;
     padding: 15px;
+    background-color: white;
+    margin-bottom: 10px;
 }
 
 .chat-input-wrapper {
     padding: 15px;
     border: 1px solid #ccc;
     border-radius: 10px;
-    background-color: #f5f5f5;
+    background-color: white;
 }
 
 .chat-history-wrapper p {
