--- a/GoodPT/templates/layout.html
+++ b/GoodPT/templates/layout.html
@@ -83,7 +83,7 @@
             <div class="col-auto col-md-4 col-lg-auto my-3 text-xl-start"><img src="{% static '/img/gallery/django.png' %}" height="40" alt="..." /></div>
             <div class="col-auto col-md-4 col-lg-auto my-3 text-xl-start"><img src="{% static '/img/gallery/bootstrap.png' %}" height="40" alt="..." /></div>
             <div class="col-auto col-md-4 col-lg-auto my-3 text-xl-start"><img src="{% static '/img/gallery/python.png' %}" height="40" alt="..." /></div>
-            <div class="col-auto col-md-4 col-lg-auto my-3 text-xl-start"><img src="{% static '/img/gallery/opencv.png' %}" height="40" alt="..." /></div>
+            <div class="col-auto col-md-4 col-lg-auto my-3 text-xl-start"><img src="{% static '/img/gallery/tensorflow.png' %}" height="40" alt="..." /></div>
             <div class="col-auto col-md-4 col-lg-auto my-3 text-xl-start"><img src="{% static '/img/gallery/openai.png' %}" height="40" alt="..." /></div>
           </div>
         </div>
